--- a/app/views/layouts/layout.ejs
+++ b/app/views/layouts/layout.ejs
@@ -16,6 +16,7 @@
   </div>
   
   <footer></footer>
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="js/check.js"></script>
 </body>
 </html>
