--- a/app/views/includes/login.ejs
+++ b/app/views/includes/login.ejs
@@ -18,7 +18,7 @@
     <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
       <div class="form-group">
         <label for="email">Adress email</label>
-        <input type="email" name="email" class="form-control" placeholder="Email">
+        <input id="email" type="email" name="email" class="form-control" placeholder="Email">
       </div>
     </div>
     <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
