--- a/app/views/includes/login.ejs
+++ b/app/views/includes/login.ejs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+  <div id="error" class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
     <% if(message.length > 0) { %>
       <% message.forEach(error => { %>
         <p class="alert alert-danger"><%= error %></p>
@@ -12,7 +12,6 @@
         <p class="alert alert-danger"><%= errors.msg %></p>
       <% }) %>
     <% } %>
-
   </div>
   <form id="login" method="post" action="/login">
     <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
@@ -24,7 +23,7 @@
     <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
       <div class="form-group">
         <label for="password">Mot de passe</label>
-        <input type="password" name="password" class="form-control" placeholder="Password">
+        <input id="password" type="password" name="password" class="form-control" placeholder="Password">
       </div>
     </div>
     <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
