--- a/app/views/layouts/layout.ejs
+++ b/app/views/layouts/layout.ejs
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header>
+    <%- defineContent('menu') %>
   </header>
   
   <div class="container-fluid">
@@ -17,6 +18,7 @@
   
   <footer></footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="js/check.js"></script>
 </body>
 </html>
