--- a/app/views/pages/home.ejs
+++ b/app/views/pages/home.ejs
@@ -1,8 +1,11 @@
 <%- contentFor('content') %>
 <div class="container">
   <% if(admin) { %>
-    <a href="/logout">se déconnecter</a>
-  <% } else { %>
-    <%- include admin %>
-  <% } %>
+    <!-- inclu la parti planning si la personne c'est bien connecté -->
+    <%- include ../includes/planning %>
+    <!-- SINON -->
+    <% } else { %>
+      <!-- inclu la parti admin avec le formulaire si la personne n'est pas connect -->
+      <%- include admin %>
+    <% } %>
 </div>
