--- a/app/views/includes/planning.ejs
+++ b/app/views/includes/planning.ejs
@@ -7,20 +7,16 @@
     <thead>
       <tr>
         <th>Semaine</th>
-        <% creneau.forEach(creneaux => { %>
-          <th>
-            <%= creneaux.creneau %>
-          </th>
-        <% }) %>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>Lundi</td>
-        <td class="cr1">choupaka</td>
-        <td class="cr2"></td>
-        <td class="cr3"></td>
-        <td class="cr4"></td>
+        <% userPlaning.forEach(userPlanings => { %>
+          <td class="cr1">
+           <%= userPlanings.user %> de <%= userPlanings.creneau %>
+          </td>
+        <% }) %> 
       </tr>
       <tr>
         <td>Mardi</td>
@@ -53,8 +49,6 @@
     </tbody>
   </table>
 </div>
-
-<!-- Select * from centre.creneaux_has_ordinateurs inner join centre.creneaux_has_semaines on centre.creneaux_has_ordinateurs.creneaux_id = centre.creneaux_has_semaines.creneaux_id -->
 
 <form method="post" action="/data" id="donnees">
   <div class="row">
@@ -92,10 +86,14 @@
             <% }) %>
         </select>
       </div>
+    
     </div>
   </div>
+  <input type="text" hidden value="poste1" name="poste1">
   <div class="col-lg-12">
     <button type="submit" class="btn btn-info">RÉSERVER</button>
   </div>
 </form>
+<script>
 
+</script>
