--- a/app/views/pages/admin.ejs
+++ b/app/views/pages/admin.ejs
@@ -1,3 +1,4 @@
-<h1 class="text-center">Accès ADMIN</h1>
-
-<%- include ../includes/login %>
+<div class="login">
+  <h2 class="text-center">Accès administrateur</h2>
+  <%- include ../includes/login %>
+</div> 
