--- a/app/views/includes/login.ejs
+++ b/app/views/includes/login.ejs
@@ -14,19 +14,19 @@
     <% } %>
   </div>
   <form id="login" method="post" action="/login">
-    <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+    <div class="col-lg-12">
       <div class="form-group">
-        <label for="email">Adress email</label>
+        <label for="email">Adresse email</label>
         <input id="email" type="email" name="email" class="form-control" placeholder="Email">
       </div>
     </div>
-    <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+    <div class="col-lg-12">
       <div class="form-group">
         <label for="password">Mot de passe</label>
         <input id="password" type="password" name="password" class="form-control" placeholder="Password">
       </div>
     </div>
-    <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+    <div class="col-lg-6">
       <button type="submit" class="btn btn-success">se connecter</button>
     </div>
   </form>
