ajout de tous les postes jusqu'a 5

--- a/app/views/layouts/layout.ejs
+++ b/app/views/layouts/layout.ejs
@@ -13,9 +13,12 @@
     <%- defineContent('menu') %>
   </header>
   
-  <div class="container-fluid">
-    <%- defineContent('content') %>
-  </div>
+  <div class="container-fluid"><%- defineContent('content') %></div>
+  <div class="container-fluid"><%- defineContent('poste1') %></div>
+  <div class="container-fluid"><%- defineContent('poste2') %></div>
+  <div class="container-fluid"><%- defineContent('poste3') %></div>
+  <div class="container-fluid"><%- defineContent('poste4') %></div>
+  <div class="container-fluid"><%- defineContent('poste5') %></div>
   
   <footer></footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
