--- a/app/views/includes/planningPoste1.ejs
+++ b/app/views/includes/planningPoste1.ejs
@@ -1,4 +1,4 @@
-<%- contentFor('content') %>
+<%- contentFor('poste1') %>
 
 <div class="table-responsive col-lg-offset-1 col-lg-11">
   <h2 class="poste">Planning du poste 1 :</h2>
@@ -27,7 +27,6 @@
             <a href="/delete/<%= mardi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
           </td>
         <% }) %>
-
        
         </tr>
       <tr>
@@ -67,9 +66,9 @@
 <form method="post" action="/data" id="donnees">
   <div class="row">
     <div class="col-lg-offset-1 col-lg-10 bloc_attribution">
-      <h3 class="userAttribution">Attribuer un user au poste 1 :</h3> 
+      <h3 class="userAttribution">Attribuer un visiteur au poste 1 :</h3> 
       <!--  -->
-      <div class="col-lg-3">
+      <div class="col-xs-12 col-lg-3">
         <label for="listes visiteurs">Listes des users</label>
         <select class="btn btn-default col-lg-12 col-xs-12" name="users" form="donnees">
           <% users.forEach(user => { %>
@@ -80,7 +79,7 @@
         </select>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-xs-12 col-lg-3">
         <label for="listes visiteurs">Créneaux horraires</label>
         <select class="btn btn-default col-lg-12 col-xs-12" name="creneau" form="donnees">
           <% creneau.forEach(creneau => { %>
@@ -91,7 +90,7 @@
         </select>
       </div>
 
-      <div class="col-lg-3">
+      <div class="col-xs-12 col-lg-3">
         <label for="listes visiteurs">Jours</label>
         <select class="btn btn-default col-lg-12 col-xs-12" name="jour" form="donnees">
           <% week.forEach(jour => { %>
@@ -102,13 +101,16 @@
         </select>
       </div>
       <input type="text" hidden value="poste1" name="poste1">
-      <div class="col-lg-2 col-xs-2 reserver">
+      <div class="col-lg-3 col-xs-2 reserver">
         <button type="submit" class="btn btn-info">Réserver</button>
       </div>
-    
     </div>
   </div>
 </form>
 <script>
 
 </script>
+<!-- 
+<div class="col-lg-offset-4 col-lg-4">
+  
+  <div class="col-lg-7"> --> 
