--- a/app/views/pages/home.ejs
+++ b/app/views/pages/home.ejs
@@ -3,7 +3,11 @@
   <% if(admin) { %>
     <!-- inclu la parti planning si la personne c'est bien connecté -->
     <%- include ../includes/menu %>
-    <%- include ../includes/planning %>
+    <%- include ../includes/planningPoste1 %>
+    <%- include ../includes/planningPoste2 %>
+    <%- include ../includes/planningPoste3 %>
+    <%- include ../includes/planningPoste4 %>
+    <%- include ../includes/planningPoste5 %>
     <!-- SINON -->
     <% } else { %>
       <!-- inclu la parti admin avec le formulaire si la personne n'est pas connect -->
