--- a/app/views/includes/addUser.ejs
+++ b/app/views/includes/addUser.ejs
@@ -1,26 +1,17 @@
+<% contentFor('addUser') %>
 <div class="row">
-  <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
-    <% if ( (typeof(flashErrors) && typeof(flashSuccess)) === 'undefined') { %><% } %>
+    <% if ((typeof(flashErrors) && typeof(flashSuccess)) === 'undefined') { %><% } %>
+
     <% if (typeof(flashErrors) === 'object') { %>
-      <% flashErrors.forEach(errors => { %>
-        <p class="alert alert-danger"><%= errors.msg %></p>
-      <% }) %>
+      <% flashErrors.forEach(errors => { %><p class="alert alert-danger"><%= errors.msg %></p><% }) %>
     <% } %>
     
-    <% if (typeof(flashSuccess) === 'string') { %>
-        <p class="alert alert-success"><%= flashSuccess %></p>
-    <% } %>
-
-  </div>
+    <% if (typeof(flashSuccess) === 'string') { %> <p class="alert alert-success"><%= flashSuccess %></p><% } %>
   <form method="post" action="/">
-    <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
       <div class="form-group">
         <label for="name">Nom</label>
         <input type="text" name="name" class="form-control" placeholder="Nom">
       </div>
-    </div>
-    <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
       <button type="submit" class="btn btn-info">Ajouter</button>
-    </div>
   </form>
 </div>
