--- a/app/views/includes/planningPoste1.ejs
+++ b/app/views/includes/planningPoste1.ejs
@@ -12,7 +12,7 @@
     <tbody>
       <tr>
         <td>Lundi</td>
-        <% lundi.forEach(lundi => { %>
+        <% lundiPoste1.forEach(lundi => { %>
           <td class="text-left">
             <%= lundi.user %> de <%= lundi.creneau %>
             <a href="/delete/<%= lundi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
@@ -21,7 +21,7 @@
       </tr>
       <tr>
         <td>Mardi</td>
-        <% mardi.forEach(mardi => { %>
+        <% mardiPoste1.forEach(mardi => { %>
           <td class="text-left">
             <%= mardi.user %> de <%= mardi.creneau %>
             <a href="/delete/<%= mardi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
@@ -31,7 +31,7 @@
         </tr>
       <tr>
         <td>Mercredi</td>
-        <% mercredi.forEach(mercredi => { %>
+        <% mercrediPoste1.forEach(mercredi => { %>
           <td class="text-left">
             <%= mercredi.user %> de
             <%= mercredi.creneau %>
@@ -41,7 +41,7 @@
       </tr>
       <tr>
         <td>Jeudi</td>
-        <% jeudi.forEach(jeudi => { %>
+        <% jeudiPoste1.forEach(jeudi => { %>
           <td class="text-left">
             <%= jeudi.user %> de
             <%= jeudi.creneau %>
@@ -51,7 +51,7 @@
       </tr>
       <tr>
         <td>Vendredi</td>
-        <% vendredi.forEach(vendredi => { %>
+        <% vendrediPoste1.forEach(vendredi => { %>
           <td class="text-left">
             <%= vendredi.user %> de
             <%= vendredi.creneau %>
