--- a/app/views/pages/home.ejs
+++ b/app/views/pages/home.ejs
@@ -4,6 +4,8 @@
     <!-- inclu la parti planning si la personne c'est bien connecté -->
     <%- include ../includes/menu %>
     <%- include ../includes/planningPoste1 %>
+    <%- include ../includes/planningPoste2 %>
+    
 
     <!-- SINON -->
     <% } else { %>
