--- a/app/views/includes/planningPoste2.ejs
+++ b/app/views/includes/planningPoste2.ejs
@@ -12,7 +12,7 @@
     <tbody>
       <tr>
         <td>Lundi</td>
-        <% lundi.forEach(lundi => { %>
+        <% lundiPoste2.forEach(lundi => { %>
           <td class="text-left">
             <%= lundi.user %> de
               <%= lundi.creneau %>
@@ -20,60 +20,19 @@
           </td>
           <% }) %>
       </tr>
-      <tr>
-        <td>Mardi</td>
-        <% mardi.forEach(mardi => { %>
-          <td class="text-left">
-            <%= mardi.user %> de
-              <%= mardi.creneau %>
-                <a href="/delete/<%= mardi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
-          </td>
-          <% }) %>
 
-
-      </tr>
-      <tr>
-        <td>Mercredi</td>
-        <% mercredi.forEach(mercredi => { %>
-          <td class="text-left">
-            <%= mercredi.user %> de
-              <%= mercredi.creneau %>
-                <a href="/delete/<%= mercredi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
-          </td>
-          <% }) %>
-      </tr>
-      <tr>
-        <td>Jeudi</td>
-        <% jeudi.forEach(jeudi => { %>
-          <td class="text-left">
-            <%= jeudi.user %> de
-              <%= jeudi.creneau %>
-                <a href="/delete/<%= jeudi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
-          </td>
-          <% }) %>
-      </tr>
-      <tr>
-        <td>Vendredi</td>
-        <% vendredi.forEach(vendredi => { %>
-          <td class="text-left">
-            <%= vendredi.user %> de
-              <%= vendredi.creneau %>
-                <a href="/delete/<%= vendredi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
-          </td>
-          <% }) %>
-      </tr>
     </tbody>
   </table>
 </div>
 
-<form method="post" action="/data" id="donnees">
+<form method="post" action="/data2" id="data2">
   <div class="row">
     <div class="col-lg-offset-1 col-lg-10 bloc_attribution">
       <h3 class="userAttribution">Attribuer un visiteur au poste 2 :</h3>
       <!--  -->
       <div class="col-xs-12 col-lg-3">
         <label for="listes visiteurs">Listes des users</label>
-        <select class="btn btn-default col-lg-12 col-xs-12" name="users" form="donnees">
+        <select class="btn btn-default col-lg-12 col-xs-12" name="users" form="data2">
           <% users.forEach(user => { %>
             <option class="" name="listesUsers" value="<%= user.name %>">
               <%= user.name %>
@@ -84,7 +43,7 @@
 
       <div class="col-xs-12 col-lg-3">
         <label for="listes visiteurs">Créneaux horraires</label>
-        <select class="btn btn-default col-lg-12 col-xs-12" name="creneau" form="donnees">
+        <select class="btn btn-default col-lg-12 col-xs-12" name="creneau" form="data2">
           <% creneau.forEach(creneau => { %>
             <option class="" name="listesUsers" value="<%= creneau.creneau %>">
               <%= creneau.creneau %>
@@ -95,7 +54,7 @@
 
       <div class="col-xs-12 col-lg-3">
         <label for="listes visiteurs">Jours</label>
-        <select class="btn btn-default col-lg-12 col-xs-12" name="jour" form="donnees">
+        <select class="btn btn-default col-lg-12 col-xs-12" name="jour" form="data2">
           <% week.forEach(jour => { %>
             <option class="" name="listesUsers" value="<%= jour.jour %>">
               <%= jour.jour %>
@@ -103,7 +62,7 @@
             <% }) %>
         </select>
       </div>
-      <input type="text" hidden value="poste1" name="poste1">
+      <input type="text" hidden value="poste2" name="poste2">
       <div class="col-lg-3 col-xs-2 reserver">
         <button type="submit" class="btn btn-info">Réserver</button>
       </div>
