--- a/app/views/layouts/layout.ejs
+++ b/app/views/layouts/layout.ejs
@@ -14,7 +14,7 @@
   </header>
   
   <div class="container-fluid"><%- defineContent('content') %></div>
-  <div class="container-fluid"><%- defineContent('adduser') %></div>
+  <div class="container-fluid"><%- defineContent('addUser') %></div>
   <div class="container-fluid"><%- defineContent('poste1') %></div>
   <div class="container-fluid"><%- defineContent('poste2') %></div>
   <div class="container-fluid"><%- defineContent('poste3') %></div>
