--- a/app/views/pages/home.ejs
+++ b/app/views/pages/home.ejs
@@ -5,6 +5,7 @@
     <%- include ../includes/menu %>
     <%- include ../includes/planningPoste1 %>
     <%- include ../includes/planningPoste2 %>
+    <%- include ../includes/addUser %>
     
 
     <!-- SINON -->
