--- a/app/views/includes/addUser.ejs
+++ b/app/views/includes/addUser.ejs
@@ -1,13 +1,6 @@
-<% contentFor('addUser') %>
+<%- contentFor('addUser') %>
 <div class="row">
-    <% if ((typeof(flashErrors) && typeof(flashSuccess)) === 'undefined') { %><% } %>
-
-    <% if (typeof(flashErrors) === 'object') { %>
-      <% flashErrors.forEach(errors => { %><p class="alert alert-danger"><%= errors.msg %></p><% }) %>
-    <% } %>
-    
-    <% if (typeof(flashSuccess) === 'string') { %> <p class="alert alert-success"><%= flashSuccess %></p><% } %>
-  <form method="post" action="/">
+  <form method="post" action="/insertUser">
       <div class="form-group">
         <label for="name">Nom</label>
         <input type="text" name="name" class="form-control" placeholder="Nom">
