ajouts des 5 postes Ok

--- a/app/views/includes/menu.ejs
+++ b/app/views/includes/menu.ejs
@@ -9,11 +9,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Accueil</a>
+      <a class="navbar-brand" href="/poste1">Accueil</a>
     </div>
+    
     <div class="collapse navbar-collapse navbar-ex1-collapse">
+      <ul class="nav navbar-nav navbar-left">
+        <li><a href="/poste1">POSTE 1</a></li>
+        <li><a href="/poste2">POSTE 2</a></li>
+        <li><a href="/poste3">POSTE 3</a></li>
+        <li><a href="/poste4">POSTE 4</a></li>
+        <li><a href="/poste5">POSTE 5</a></li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/logout">se déconnecter</a></li>
+        <li><a href="/logout">SE DÉCONNECTER</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </nav>
