--- a/app/views/includes/login.ejs
+++ b/app/views/includes/login.ejs
@@ -1,12 +1,17 @@
 <div class="row">
   <div id="error" class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
-    <% if(message.length > 0) { %>
-      <% message.forEach(error => { %>
-        <p class="alert alert-danger"><%= error %></p>
-      <% }) %>
-    <% } %>
+    <% if ( typeof(message) === 'undefined') { %><% } %>
+    
+    <% if (typeof(flashErrors) === 'object') { %>
+      <% if(message.length > 0) { %>
+        <% message.forEach(error => { %>
+          <p class="alert alert-danger"><%= error %></p>
+        <% }) %>
+      <% } %>
+    <%} %>
 
     <% if ( typeof(flashErrors) === 'undefined') { %><% } %>
+    
     <% if (typeof(flashErrors) === 'object') { %>
       <% flashErrors.forEach(errors => { %>
         <p class="alert alert-danger"><%= errors.msg %></p>
