--- a/app/views/includes/planningPoste4.ejs
+++ b/app/views/includes/planningPoste4.ejs
@@ -16,7 +16,7 @@
             <td class="text-left">
               <%= lundi.user %> de
                 <%= lundi.creneau %>
-                  <a href="/delete/<%= lundi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
+                  <a href="/deletePlanning4/<%= lundi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
             </td>
             <% }) %>
         </tr>
@@ -26,7 +26,7 @@
             <td class="text-left">
               <%= mardi.user %> de
                 <%= mardi.creneau %>
-                  <a href="/delete/<%= mardi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
+                  <a href="/deletePlanning4/<%= mardi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
             </td>
             <% }) %>
 
@@ -38,7 +38,7 @@
             <td class="text-left">
               <%= mercredi.user %> de
                 <%= mercredi.creneau %>
-                  <a href="/delete/<%= mercredi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
+                  <a href="/deletePlanning4/<%= mercredi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
             </td>
             <% }) %>
         </tr>
@@ -48,7 +48,7 @@
             <td class="text-left">
               <%= jeudi.user %> de
                 <%= jeudi.creneau %>
-                  <a href="/delete/<%= jeudi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
+                  <a href="/deletePlanning4/<%= jeudi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
             </td>
             <% }) %>
         </tr>
@@ -58,7 +58,7 @@
             <td class="text-left">
               <%= vendredi.user %> de
                 <%= vendredi.creneau %>
-                  <a href="/delete/<%= vendredi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
+                  <a href="/deletePlanning4/<%= vendredi.id %>" style="color:red" class="glyphicon glyphicon-minus-sign"></a>
             </td>
             <% }) %>
         </tr>
@@ -66,14 +66,14 @@
     </table>
   </div>
 
-  <form method="post" action="/data" id="donnees">
+  <form method="post" action="/data4" id="data4">
     <div class="row">
       <div class="col-lg-offset-1 col-lg-10 bloc_attribution">
         <h3 class="userAttribution">Attribuer un visiteur au poste 4 :</h3>
         <!--  -->
         <div class="col-xs-12 col-lg-3">
           <label for="listes visiteurs">Listes des users</label>
-          <select class="btn btn-default col-lg-12 col-xs-12" name="users" form="donnees">
+          <select class="btn btn-default col-lg-12 col-xs-12" name="users" form="data4">
             <% users.forEach(user => { %>
               <option class="" name="listesUsers" value="<%= user.name %>">
                 <%= user.name %>
@@ -84,7 +84,7 @@
 
         <div class="col-xs-12 col-lg-3">
           <label for="listes visiteurs">Créneaux horraires</label>
-          <select class="btn btn-default col-lg-12 col-xs-12" name="creneau" form="donnees">
+          <select class="btn btn-default col-lg-12 col-xs-12" name="creneau" form="data4">
             <% creneau.forEach(creneau => { %>
               <option class="" name="listesUsers" value="<%= creneau.creneau %>">
                 <%= creneau.creneau %>
@@ -95,7 +95,7 @@
 
         <div class="col-xs-12 col-lg-3">
           <label for="listes visiteurs">Jours</label>
-          <select class="btn btn-default col-lg-12 col-xs-12" name="jour" form="donnees">
+          <select class="btn btn-default col-lg-12 col-xs-12" name="jour" form="data4">
             <% week.forEach(jour => { %>
               <option class="" name="listesUsers" value="<%= jour.jour %>">
                 <%= jour.jour %>
@@ -103,7 +103,7 @@
               <% }) %>
           </select>
         </div>
-        <input type="text" hidden value="poste1" name="poste1">
+        <input type="text" hidden value="poste4" name="poste4">
         <div class="col-lg-3 col-xs-2 reserver">
           <button type="submit" class="btn btn-info">Réserver</button>
         </div>
