--- a/app/views/pages/poste5.ejs
+++ b/app/views/pages/poste5.ejs
@@ -4,6 +4,8 @@
       <!-- inclu la parti planning si la personne c'est bien connecté -->
       <%- include ../includes/menu %>
       <%- include ../includes/planningPoste5 %>
+      <%- include ../includes/addUser %>
+
       <!-- SINON -->
     <% } else { %>
         <!-- inclu la parti admin avec le formulaire si la personne n'est pas connect -->
