--- a/app/views/pages/poste1.ejs
+++ b/app/views/pages/poste1.ejs
@@ -4,6 +4,7 @@
       <!-- inclu la parti planning si la personne c'est bien connecté -->
       <%- include ../includes/menu %>
       <%- include ../includes/planningPoste1 %>
+      <%- include ../includes/addUser %>
       <!-- SINON -->
     <% } else { %>
       <!-- inclu la parti admin avec le formulaire si la personne n'est pas connect -->
