--- a/app/views/layouts/layout.ejs
+++ b/app/views/layouts/layout.ejs
@@ -6,7 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <title>layout</title>
+  <link rel="icon" type="image/png" href="img/poste.png" />
+
+  <title>Postes</title>
 </head>
 <body>
   <header>
